# goldenui

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml
doc/: conf.py  index.rst  requirements.txt
doc/modules/: manager.rst  patch.rst  util.rst
doc/modules/widget/: base.rst  button.rst  index.rst
doc/modules/widget/container/: base.rst  center.rst  index.rst
doc/modules/widgets/: base.rst  button.rst  index.rst
doc/programming_guide/: 00_get_start.rst  00_getting_started.rst  01_manager_and_widgets.rst  01_widgets_and_manager.rst  02_handling_events.rst
examples/: center.py  container.py  start.py
examples/prog_guides/: start.py
gletter/: __init__.py  manager.py  patch.py
gletter/widgets/: __init__.py  base.py  button.py
goldenui/: __init__.py  group.py  manager.py  patch.py  util.py
goldenui/__pyinstaller/: hook-goldenui.py
goldenui/resources/: __init__.py
goldenui/widget/: __init__.py  base.py  button.py
goldenui/widget/container/: __init__.py  base.py  center.py
goldenui/widgets/: __init__.py  base.py  button.py
