[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "goldenui"
authors = [
    {name = "zhengxyz123", email = "zhengxyz123@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pyglet >=2.0,!=2.0.12,<=2.0.15"
]
requires-python = ">=3.10"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/zhengxyz123/goldenui"
